@@ -78,7 +78,7 @@ implements java.io.Serializable
     private static HashMap interfaceHash = new HashMap();
     static {
 	for (int i=0; i<interfaceKeys.length; i++) 
-	    interfaceHash.put(interfaceKeys[i], Integer.valueOf(i));
+	    interfaceHash.put(interfaceKeys[i], new Integer(i));
     };
 
     private transient int methodInterface;
@@ -471,7 +471,7 @@ implements java.io.Serializable
      * values of the serialized fields (as is done by defaultReadObject) 
      * is sufficient to initialize the permission.
      */
-    private void readObject(java.io.ObjectInputStream s)
+    private synchronized void readObject(java.io.ObjectInputStream s)
          throws IOException,ClassNotFoundException
     {
 	setMethodSpec((String) s.readFields().get("actions",null));
